[workspace]
resolver = "2"
members = [
    "benches/alloc",
    "benches/micro",
    "examples/demo",
    "examples/fuse_test",
    "examples/hello_world",
    "examples/httpd",
    "examples/mutex",
    "hermit",
    "hermit-abi",
    "benches/startup", 
    "benches/multithreaded",
]
exclude = ["target", "kernel"]
