[package]
name = "alloc_benchmarks"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
version = "0.1.0"

[dependencies]
fastrand = "2.0.0"
hermit_bench_output = "0.1.0"


[target.'cfg(target_os = "hermit")'.dependencies]
libhermit-rs = { path = "../../libhermit-rs", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.11"

[features]
default = ["libhermit-rs/acpi", "libhermit-rs/pci"]
