[package]

name = "rust-tcp-io-perf"
authors = ["Lorenzo Martini <lmartini@student.ethz.ch>"]
edition = "2021"
readme = "README.md"
version = "0.1.0"

description = "A Rust program to measure bandwidth or latency over a Rust TCP connection"

[dependencies]
bytes = "1.1"
clap = { version ="4.1", features = ["derive"] }
core_affinity = "0.8"
hdrhist = "0.5"
hermit_bench_output = "0.1.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp", "hermit/tcp", "hermit/pci-ids"]

[[bin]]
name = "tcp-server-bw"
path = "src/rust-tcp-bw/server.rs"

[[bin]]
name = "tcp-client-bw"
path = "src/rust-tcp-bw/client.rs"

[[bin]]
name = "tcp-server-latency"
path = "src/rust-tcp-latency/server.rs"

[[bin]]
name = "tcp-client-latency"
path = "src/rust-tcp-latency/client.rs"
