[package]
name = "rusty_demo"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
version = "0.1.0"

[dependencies]
rayon = "1.5"
hermit_bench_output = "0.1.0"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = { path = "../../hermit", default-features = false }

[features]
default = ["hermit/acpi", "hermit/pci", "hermit/smp"]
fs = ["hermit/fs"]
