[package]
name = "hello_world"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
version = "0.1.0"

[target.'cfg(target_os = "hermit")'.dependencies]
libhermit-rs =  { path = "../../libhermit-rs", default-features = false }

[features]
default = ["libhermit-rs/acpi", "libhermit-rs/pci"]
