[package]
name = "poll"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"

[dependencies]
polling = "3.6"
env_logger = { version = "0.11.2", default-features = false }
log = { version = "0.4.8" }

[target.'cfg(target_os = "hermit")'.dependencies]
libhermit-rs =  { path = "../../libhermit-rs", default-features = false }

[features]
default = ["libhermit-rs/acpi", "libhermit-rs/dhcpv4", "libhermit-rs/pci", "libhermit-rs/pci-ids", "libhermit-rs/tcp"]
