[package]
name = "rftrace-example"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"

[dependencies]
rftrace = "0.2"
rftrace-frontend = "0.2"

[target.'cfg(target_os = "hermit")'.dependencies]
libhermit-rs =  { path = "../../libhermit-rs" }

[features]
instrument-kernel = ["libhermit-rs/instrument"]
